Add societal impact, change teaser and remove inpainting result

--- a/index.html
+++ b/index.html
@@ -135,21 +135,31 @@
     </div>
 </section>
 
+
 <section class="hero teaser">
     <div class="container is-max-desktop">
         <div class="hero-body">
-            <video id="teaser-michelle" autoplay controls muted loop height="80%">
-                <source src="static/videos/walk/michelle_obama.mp4" type="video/mp4">
-            </video>
-            <video id="teaser-biden" autoplay controls muted loop>
-                <source src="static/videos/walk/joe_biden.mp4" type="video/mp4">
-            </video>
-            <video id="teaser-xi" autoplay controls muted loop>
-                <source src="static/videos/walk/xi_jinping.mp4" type="video/mp4">
-            </video>
+            <img src="static/images/teaser.png"
+                                     alt="Teaser"/>
         </div>
     </div>
 </section>
+
+<!--<section class="hero teaser">-->
+<!--    <div class="container is-max-desktop">-->
+<!--        <div class="hero-body">-->
+<!--            <video id="teaser-michelle" autoplay controls muted loop height="80%">-->
+<!--                <source src="static/videos/walk/michelle_obama.mp4" type="video/mp4">-->
+<!--            </video>-->
+<!--            <video id="teaser-biden" autoplay controls muted loop>-->
+<!--                <source src="static/videos/walk/joe_biden.mp4" type="video/mp4">-->
+<!--            </video>-->
+<!--            <video id="teaser-xi" autoplay controls muted loop>-->
+<!--                <source src="static/videos/walk/xi_jinping.mp4" type="video/mp4">-->
+<!--            </video>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 
 
 <section class="hero">
@@ -198,10 +208,11 @@
     </div>
 </section>
 
+
 <section class="hero is-light is-small">
     <div class="hero-body unpad">
         <div class="columns is-centered">
-            <div class="column">
+            <div class="column columns is-centered has-text-centered">
                 <div class="container is-max-desktop">
                     <div class="section-title">
                         <h2 class="title is-3 is-centered">Super-Resolution</h2>
@@ -270,70 +281,70 @@
     </div>
 </section>
 
-<section class="hero is-small">
-    <div class="hero-body unpad">
-        <div class="columns is-centered">
-            <div class="column">
-                <div class="container is-max-desktop">
-                    <div class="section-title">
-                        <h2 class="title is-3 is-centered">Inpainting</h2>
-                    </div>
-                    <div id="results-carousel-inpainting" class="carousel_multi results-carousel">
-                        <div class="item item-inpainting">
-                            <div class="carousel-content">
-                                <img src="static/images/inpainting/barack_obama.jpg"
-                                     alt="Barack Obama"/>
-                                <h2 class="subtitle has-text-centered">Barack Obama</h2>
-                            </div>
-                        </div>
-                        <div class="item item-inpainting">
-                            <div class="carousel-content">
-                                <img src="static/images/inpainting/michelle_obama.jpg"
-                                     alt="Michelle Obama"/>
-                                <h2 class="subtitle has-text-centered">Barack Obama</h2>
-                            </div>
-                        </div>
-                        <div class="item item-inpainting">
-                            <div class="carousel-content">
-                                <img src="static/images/inpainting/dwayne_johnson.jpg"
-                                     alt="X"/>
-                                <h2 class="subtitle has-text-centered">Dwayne Johnson</h2>
-                            </div>
-                        </div>
-                        <div class="item item-inpainting">
-                            <div class="carousel-content">
-                                <img src="static/images/inpainting/joe_biden.jpg"
-                                     alt="Joe biden"/>
-                                <h2 class="subtitle has-text-centered">Joe Biden</h2>
-                            </div>
-                        </div>
-                        <div class="item item-inpainting">
-                            <div class="carousel-content">
-                                <img src="static/images/inpainting/xi_jinping.jpg"
-                                     alt="Xi Jinping"/>
-                                <h2 class="subtitle has-text-centered">Xi Jinping</h2>
-                            </div>
-                        </div>
-                        <div class="item item-inpainting">
-                            <div class="carousel-content">
-                                <img src="static/images/inpainting/adele.jpg"
-                                     alt="Adele"/>
-                                <h2 class="subtitle has-text-centered">Adele</h2>
-                            </div>
-                        </div>
-                        <div class="item item-inpainting">
-                            <div class="carousel-content">
-                                <img src="static/images/inpainting/angela_merkel.jpg"
-                                     alt="Angela Merkel"/>
-                                <h2 class="subtitle has-text-centered">Angela Merkel</h2>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+<!--<section class="hero is-small">-->
+<!--    <div class="hero-body unpad">-->
+<!--        <div class="columns is-centered">-->
+<!--            <div class="column">-->
+<!--                <div class="container is-max-desktop">-->
+<!--                    <div class="section-title">-->
+<!--                        <h2 class="title is-3 is-centered">Inpainting</h2>-->
+<!--                    </div>-->
+<!--                    <div id="results-carousel-inpainting" class="carousel_multi results-carousel">-->
+<!--                        <div class="item item-inpainting">-->
+<!--                            <div class="carousel-content">-->
+<!--                                <img src="static/images/inpainting/barack_obama.jpg"-->
+<!--                                     alt="Barack Obama"/>-->
+<!--                                <h2 class="subtitle has-text-centered">Barack Obama</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="item item-inpainting">-->
+<!--                            <div class="carousel-content">-->
+<!--                                <img src="static/images/inpainting/michelle_obama.jpg"-->
+<!--                                     alt="Michelle Obama"/>-->
+<!--                                <h2 class="subtitle has-text-centered">Barack Obama</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="item item-inpainting">-->
+<!--                            <div class="carousel-content">-->
+<!--                                <img src="static/images/inpainting/dwayne_johnson.jpg"-->
+<!--                                     alt="X"/>-->
+<!--                                <h2 class="subtitle has-text-centered">Dwayne Johnson</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="item item-inpainting">-->
+<!--                            <div class="carousel-content">-->
+<!--                                <img src="static/images/inpainting/joe_biden.jpg"-->
+<!--                                     alt="Joe biden"/>-->
+<!--                                <h2 class="subtitle has-text-centered">Joe Biden</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="item item-inpainting">-->
+<!--                            <div class="carousel-content">-->
+<!--                                <img src="static/images/inpainting/xi_jinping.jpg"-->
+<!--                                     alt="Xi Jinping"/>-->
+<!--                                <h2 class="subtitle has-text-centered">Xi Jinping</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="item item-inpainting">-->
+<!--                            <div class="carousel-content">-->
+<!--                                <img src="static/images/inpainting/adele.jpg"-->
+<!--                                     alt="Adele"/>-->
+<!--                                <h2 class="subtitle has-text-centered">Adele</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="item item-inpainting">-->
+<!--                            <div class="carousel-content">-->
+<!--                                <img src="static/images/inpainting/angela_merkel.jpg"-->
+<!--                                     alt="Angela Merkel"/>-->
+<!--                                <h2 class="subtitle has-text-centered">Angela Merkel</h2>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 
 <section class="hero is-light is-small">
     <div class="hero-body">
@@ -408,8 +419,8 @@
 </section>
 
 <section class="hero is-small">
-    <div class="hero-body unpad">
-        <div class="columns is-centered">
+    <div class="hero-body is-max-desktop">
+        <div class="columns is-centered has-text-centered">
             <div class="column is-three-fifth">
                 <div class="container is-max-desktop">
                     <div class="section-title">
@@ -584,6 +595,61 @@
         </div>
     </div>
 </section>
+
+&nbsp;
+&nbsp;
+
+<section class="hero">
+    <div class="container is-max-desktop">
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-six-fifths">
+                <h2 class="title is-5">Notice-  None of the images above are real photographs, but generated images.</h2>
+            </div>
+        </div>
+    </div>
+</section>
+
+&nbsp;
+&nbsp;
+
+<section class="hero">
+    <div class="container is-max-desktop">
+        <div class="columns is-centered has-text-centered">
+            <div class="column is-six-fifths">
+                <h2 class="title is-3">Societal Impact</h2>
+
+                <div class="content has-text-justified">
+                    <p>
+                        This project aims to provide users with an effective tool to correct and enhance
+                        photographs of themselves and of close friends and family.
+                        Previous deep-learning based approaches formed facial priors using large, generic and commonly biased datasets.
+                        Therefore, their results unfortunately underperformed for underrepresented groups.
+                        On the contrary, our approach forms a personalized prior for each individual using their on own photo album.
+                        This ensures our results to be faithful and accurate to the individual's identity,
+                        specifically for underrepresented groups in large available datasets.
+                        Hopefully, faithfully enhancing their images will improve users' satisfaction from their
+                        captured photographs.
+                    </p>
+                    <p>
+                        At the same time, in the wrong hands, our tool might be used for malicious purposes.
+                        Our approach allows synthesizing novel images of individuals for which a photo album is available.
+                        Unfortunately, malicious parties might try to use such images to mislead viewers.
+                        This is a common issue, existing in even the simplest tools for enhancing, generating or manipulating images.
+
+                        Importantly, since our method requires ~100 images of an individual to operate,
+                        it sets the entry bar high for a malicious party while still being easily accessible for our intended users.
+                        Second, current research shows that deep generated images are still easily detectable as such,
+                        and thus reduces the risk of misleading audiences at scale.
+                        Future research in generative modeling, and specifically of personalized generative priors,
+                        must continue investigating and revalidating these concerns.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 
 <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
