Add link to code

--- a/index.html
+++ b/index.html
@@ -96,6 +96,17 @@
                   <span>Paper</span>
                 </a>
               </span>
+                            <!-- Code Link. -->
+                            <span class="link-block">
+                <a href="https://github.com/google/mystyle"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
+                  </a>
+              </span>
+
                             <span class="link-block">
                 <a href="supp.html"
                    class="external-link button is-normal is-rounded is-dark">
@@ -105,7 +116,6 @@
                   <span>Supplementary</span>
                 </a>
               </span>
-
                             <!-- Video Link. -->
                             <span class="link-block">
                 <a href="https://youtu.be/axWo_9Gt47o"
@@ -115,16 +125,6 @@
                   </span>
                   <span>Video</span>
                 </a>
-              </span>
-                            <!-- Code Link. -->
-                            <span class="link-block">
-                <a href=""
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-github"></i>
-                  </span>
-                  <span>Code (Soon)</span>
-                  </a>
               </span>
                         </div>
 
@@ -140,7 +140,7 @@
     <div class="container is-max-desktop">
         <div class="hero-body">
             <img src="static/images/teaser.png"
-                                     alt="Teaser"/>
+                 alt="Teaser"/>
         </div>
     </div>
 </section>
@@ -603,7 +603,7 @@
     <div class="container is-max-desktop">
         <div class="columns is-centered has-text-centered">
             <div class="column is-six-fifths">
-                <h2 class="title is-5">Notice-  None of the images above are real photographs, but generated images.</h2>
+                <h2 class="title is-5">Notice- None of the images above are real photographs, but generated images.</h2>
             </div>
         </div>
     </div>
@@ -622,9 +622,11 @@
                     <p>
                         This project aims to provide users with an effective tool to correct and enhance
                         photographs of themselves and of close friends and family.
-                        Previous deep-learning based approaches formed facial priors using large, generic and commonly biased datasets.
+                        Previous deep-learning based approaches formed facial priors using large, generic and commonly
+                        biased datasets.
                         Therefore, their results unfortunately underperformed for underrepresented groups.
-                        On the contrary, our approach forms a personalized prior for each individual using their on own photo album.
+                        On the contrary, our approach forms a personalized prior for each individual using their on own
+                        photo album.
                         This ensures our results to be faithful and accurate to the individual's identity,
                         specifically for underrepresented groups in large available datasets.
                         Hopefully, faithfully enhancing their images will improve users' satisfaction from their
@@ -632,12 +634,15 @@
                     </p>
                     <p>
                         At the same time, in the wrong hands, our tool might be used for malicious purposes.
-                        Our approach allows synthesizing novel images of individuals for which a photo album is available.
+                        Our approach allows synthesizing novel images of individuals for which a photo album is
+                        available.
                         Unfortunately, malicious parties might try to use such images to mislead viewers.
-                        This is a common issue, existing in even the simplest tools for enhancing, generating or manipulating images.
+                        This is a common issue, existing in even the simplest tools for enhancing, generating or
+                        manipulating images.
 
                         Importantly, since our method requires ~100 images of an individual to operate,
-                        it sets the entry bar high for a malicious party while still being easily accessible for our intended users.
+                        it sets the entry bar high for a malicious party while still being easily accessible for our
+                        intended users.
                         Second, current research shows that deep generated images are still easily detectable as such,
                         and thus reduces the risk of misleading audiences at scale.
                         Future research in generative modeling, and specifically of personalized generative priors,
@@ -648,7 +653,6 @@
         </div>
     </div>
 </section>
-
 
 
 <section class="section" id="BibTeX">
